Fix contact on mobile

--- a/src/sass/contact.module.scss
+++ b/src/sass/contact.module.scss
@@ -8,6 +8,10 @@
 
 .emptyDiv {
   height: 100px;
+
+  @media (max-width: 500px) {
+    height: 20px;
+  }
 }
 
 .form {
@@ -21,6 +25,10 @@
   border-radius: 5px;
   border: 1px solid #666666;
   grid-template-areas: "name email" "subject subject" "message message" "message message" ". buttons";
+
+  @media (max-width: 1000px) and (min-width: 500px) {
+    margin: 1em;
+  }
 
   @media (max-width: 500px) {
     grid-template-areas: "name" "email" "subject" "message" "message" "buttons";
